# VeraLux

./: Anchor.toml  Cargo.toml  LICENSE  README.md  constants.rs  errors.rs  jest.config.js  lib.rs  package.json  state.rs  tsconfig.json
Docs/: V1.2_VeraLux Whitepaper_26-04-2025.docx  VERALUX TECHNICAL_V0.1_24-04-2025.docx
programs/veralux/: Cargo.toml
programs/veralux/src/: constrants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/veralux/src/global/: init_global.rs  mod.rs  update_global.rs
programs/veralux/src/presale/: buy_presale.rs  init_presale.rs  mod.rs
sdk/common/: helper.ts  transactions.ts
sdk/idl/: veralux.json  veralux.ts
src/: constants.rs  instruction.rs
tests/global/: init-global.test.ts  update-global.test.ts
tests/presale/: buy-presale.test.ts  init-presale.test.ts
tests/results/: results.md
