[workspace]
members = ["programs/*"]
resolver = "2"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[workspace.dependencies]
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1" }
proc-macro2 = { version = "1.0.94" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
